find that i can not use findbyname method and use only binding views

--- a/App1/MainPage.xaml
+++ b/App1/MainPage.xaml
@@ -29,6 +29,10 @@
                 x:Name="btn_third"
                 Text="stepper"
                 />
+            <Button
+                x:Name="btn_fourth"
+                Text="picker"
+                />
         </StackLayout>
     </StackLayout>
 </ContentPage>
