--- a/App1/MainPage.xaml
+++ b/App1/MainPage.xaml
@@ -33,6 +33,10 @@
                 x:Name="btn_fourth"
                 Text="picker"
                 />
+            <Button
+                x:Name="btn_fifth"
+                Text="list_view"
+                />
         </StackLayout>
     </StackLayout>
 </ContentPage>
