add some comments for me

--- a/App1/ListViewPage.xaml
+++ b/App1/ListViewPage.xaml
@@ -11,6 +11,8 @@
                 VerticalOptions="Start" 
                 HorizontalOptions="Center" />
             <ListView
+                HasUnevenRows="True"
+                ItemsSource="{Binding Phones}"
                 x:Name="randomListView"/>
         </StackLayout>
     </ContentPage.Content>
